# spacescans

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test-extras.yml  test.yml
configs/c3/: bg_us_demo.yaml  county_us_demo.yaml  nhd_demo.yaml  noise_grid_demo.yaml  temis_grid_demo.yaml  tiger_roads_demo.yaml  tract_us_demo.yaml  vnl_grid_demo.yaml  zcta5_us_demo.yaml
configs/c4/: bg_ndi_demo.yaml  bg_wi_demo.yaml  county_cbp_demo.yaml  nhd_bluespace_demo.yaml  noise_demo.yaml  temis_demo.yaml  tiger_roads_demo.yaml  tract_fara_demo.yaml  vnl_demo.yaml  zcta5_cbp_demo.yaml
scripts/: build_sample_data.py
src/spacescans/: __init__.py  _extras.py  config_resolution.py
src/spacescans/cli/: __init__.py  __main__.py  _init_config.py  _quickstart.py  _run.py
src/spacescans/engine/: duckdb_engine.py  utils.py
src/spacescans/geometry/: buffers.py  grid_weights.py  overlap.py  proximity.py
src/spacescans/io/: readers.py  spatial_readers.py  writers.py
src/spacescans/linkage/: acag_linkage.py  boundary_overlap_fast_linkage.py  boundary_overlap_linkage.py  cbp_fallback_linkage.py  faqsd_linkage.py  fara_linkage.py  grid_weights_linkage.py  gridded_linkage.py  helpers.py  nhd_proximity_linkage.py  precomputed_areal_linkage.py  precomputed_static_linkage.py  proximity_linkage.py  static_areal_linkage.py  tiger_proximity_linkage.py  yearly_areal_linkage.py
src/spacescans/models/: __init__.py  config.py  protocols.py  raster_meta.py  specs.py
src/spacescans/pipeline/: loader.py  registry.py  runner.py
src/spacescans/plugins/prep/: modis.py  prism.py  tiger.py
src/spacescans/plugins/readers/: acag.py  faqsd.py  modis_ndvi.py  modis_part1.py  nhd.py  noise.py  prism.py  prism_part1.py  temis.py  tiger_roads.py  vnl.py
src/spacescans/resources/configs/quickstart/: end_to_end.yaml
src/spacescans/resources/configs/templates/c3/: county.yaml  zcta5.yaml
src/spacescans/resources/data/: sample_counties.dbf  sample_counties.shp  sample_counties.shx  sample_patients.parquet  sample_zcta5.dbf  sample_zcta5.shp  sample_zcta5.shx
src/spacescans/transforms/: date_parse.py  derive.py  filter.py  recode.py  spatial_fix.py
tests/: conftest.py  test_cli_smoke.py  test_config_resolution.py  test_extras_gating.py  test_hdf4_gating.py  test_imports.py  test_init_config.py  test_io_base.py  test_models.py  test_nc_gating.py  test_no_v1_imports.py  test_pipeline_smoke.py  test_quickstart.py  test_rda_gating.py  test_transforms_base.py
tests/linkage/: test_geo_extras_gating.py
(+2 files in other folders)
